--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,16 @@ jobs:
           cache: 'pnpm'
           
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i
         
       - name: Type check
-        run: npm run typecheck
+        run: pnpm run typecheck
         
       - name: Run tests
-        run: npm test
+        run: pnpm test
         
       - name: Build packages
-        run: npm run build
+        run: pnpm run build
         
   lint:
     name: Lint
@@ -51,10 +51,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
           
       - name: Install dependencies  
-        run: npm ci
+        run: pnpm i
         
       - name: Type check
-        run: npm run typecheck:build
+        run: pnpm run typecheck:build
