--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+              
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -46,7 +50,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+    
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
