--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,5 +31,14 @@
     "external": []
   },
   "keywords": ["remobj", "core", "math", "utilities"],
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/remobj/remobj.git",
+    "directory": "packages/core"
+  },
+  "bugs": {
+    "url": "https://github.com/remobj/remobj/issues"
+  },
+  "homepage": "https://github.com/remobj/remobj/tree/main/packages/core#readme"
 }
