--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,5 +26,14 @@
     "external": []
   },
   "keywords": ["utility", "shared", "remobj"],
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/remobj/remobj.git",
+    "directory": "packages/shared"
+  },
+  "bugs": {
+    "url": "https://github.com/remobj/remobj/issues"
+  },
+  "homepage": "https://github.com/remobj/remobj/tree/main/packages/shared#readme"
 }
