--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,31 @@ jobs:
         
       - name: Lint files
         run: pnpm run lint
+
+  security:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+    
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+          
+      - name: Install dependencies  
+        run: pnpm i
+        
+      - name: Run npm audit
+        run: pnpm audit --audit-level=moderate
+        continue-on-error: true
+        
+      - name: Run npm audit (production only)
+        run: pnpm audit --prod --audit-level=moderate
