--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'pnpm'
           
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install --no-frozen-lockfile
         
       - name: Type check
         run: pnpm run typecheck
@@ -61,7 +61,7 @@ jobs:
           cache: 'pnpm'
           
       - name: Install dependencies  
-        run: pnpm i
+        run: pnpm install --no-frozen-lockfile
         
       - name: Lint files
         run: pnpm run lint
@@ -85,7 +85,7 @@ jobs:
           cache: 'pnpm'
           
       - name: Install dependencies  
-        run: pnpm i
+        run: pnpm install --no-frozen-lockfile
         
       - name: Run npm audit
         run: pnpm audit --audit-level=moderate
