--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -11,13 +11,16 @@ on:
 
 permissions:
   contents: read
-  security-events: write
   actions: read
 
 jobs:
   codeql:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     
     strategy:
       fail-fast: false
@@ -60,6 +63,9 @@ jobs:
   trivy:
     name: Trivy Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      contents: read
     
     steps:
       - name: Checkout repository
@@ -84,8 +90,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
+      # Needed for uploading results
       security-events: write
+      # Needed to publish results
       id-token: write
+      # Explicitly set to read as required by scorecard
       contents: read
       actions: read
       
