--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prepare": "husky && node scripts/setup-hooks.js",
     "build": "node scripts/build.js",
     "build:watch": "node scripts/build.js --watch",
     "dev": "node scripts/build.js --dev",
@@ -38,10 +39,14 @@
     "demo": "node demo/server.js"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^24.3.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "enquirer": "^2.4.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "oxlint": "^1.12.0",
     "rimraf": "^6.0.1",
     "rolldown": "1.0.0-beta.30",
