--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,12 +12,16 @@
       "import": "./dist/core.esm.js",
       "require": "./dist/core.umd.js",
       "browser": "./dist/core.umd.js",
-      "bundler": "./dist/core.bundler.js",
+      "bundler": {
+        "default": "./dist/core.bundler.js",
+        "source": "./dist/core.bundler.js.map"
+      },
       "types": "./dist/core.d.ts"
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "dist/*.map"
   ],
   "sideEffects": false,
   "dependencies": {
@@ -26,11 +30,20 @@
   },
   "buildOptions": {
     "name": "RemObjCore",
-    "formats": ["esm-production", "esm-bundler", "umd"],
+    "formats": [
+      "esm-production",
+      "esm-bundler",
+      "umd"
+    ],
     "globalName": "RemObj",
     "external": []
   },
-  "keywords": ["remobj", "core", "math", "utilities"],
+  "keywords": [
+    "remobj",
+    "core",
+    "math",
+    "utilities"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
