--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,21 +11,33 @@
     ".": {
       "import": "./dist/shared.esm.js",
       "require": "./dist/shared.umd.js",
-      "bundler": "./dist/shared.bundler.js",
+      "bundler": {
+        "default": "./dist/shared.bundler.js",
+        "source": "./dist/shared.bundler.js.map"
+      },
       "types": "./dist/shared.d.ts"
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "dist/*.map"
   ],
   "sideEffects": false,
   "buildOptions": {
     "name": "RemObjShared",
-    "formats": ["esm-production", "esm-bundler", "umd"],
+    "formats": [
+      "esm-production",
+      "esm-bundler",
+      "umd"
+    ],
     "globalName": "RemObjShared",
     "external": []
   },
-  "keywords": ["utility", "shared", "remobj"],
+  "keywords": [
+    "utility",
+    "shared",
+    "remobj"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
