--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,9 @@ tmp/
 temp/
 
 # Editor directories and files
-.vscode/
+.vscode/*
 !.vscode/extensions.json
+!.vscode/launch.json
 .idea
 .DS_Store
 *.swp
