--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -11,10 +11,11 @@ jobs:
   benchmark:
     name: Run Benchmarks
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 10  # Kill benchmarks after 10 minutes
     
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]  # Only Ubuntu - benchmarks hang on Windows
         node-version: [20.x]
         runtime: [node, deno]
       fail-fast: false
@@ -57,6 +58,7 @@ jobs:
     - name: Run Node benchmarks
       if: matrix.runtime == 'node'
       id: bench-node
+      shell: bash
       run: |
         cd benchmark
         node index.js > results.txt 2>&1
@@ -67,6 +69,7 @@ jobs:
     - name: Run Deno benchmarks
       if: matrix.runtime == 'deno'
       id: bench-deno
+      shell: bash
       run: |
         cd benchmark
         deno run --allow-all deno.ts > results.txt 2>&1 || true
